TheMightyDude (05 Apr 2008)
--------------------------------------
Fixed bug in planet2.php where you add a -value for colonists and it set it to 0 instead of flipping it.
Was:
    $transfer_colonists = -1 * $transfer_colonistst;
Should of been:
    $transfer_colonists = -1 * $transfer_colonists;

TheMightyDude (08 Feb 2008)
--------------------------------------
Fixed an exploit where you can modify fields of your own planet to have very high amounts of credits, colonists ore etc. 

TheMightyDude (26 Oct 2007)
--------------------------------------
[834641] building base doesn't check turns. (fixed)

TheMightyDude (17 Aug 2007)
--------------------------------------
Fixed movment into non valid extra sectors.

TheMightyDude (17 Aug 2007)
--------------------------------------
Fixed admin new2 for the $HTTP_POST_VARS issues.

TheMightyDude (17 Aug 2007)
--------------------------------------
Fixed Collect Credits from Planets.
This was down to using old $HTTP_POST_VARS insted of the new $_POST

TheMightyDude (09 Jan 2007)
--------------------------------------
Fixed bug in combat.php where planetfighters was set to 0 before the calculation.
Seems like there was two lines causing this problem :(

TheMightyDude (29 Dec 2006)
--------------------------------------
Fixed bug in combat.php where the planets energy wouldn't go down with the use of their beams.
Fixed bug in combat.php where planetfighters was set to 0 before the calculation.

TheMightyDude (27 Dec 2006)
--------------------------------------
Fixed the score bug, was genscore(...) function was using armour when it should of been armor.
Fixed score bug which was down to genscore using an if statment resulting in some score going to 0.

TheMightyDude (14 Dec 2006)
--------------------------------------
[1564468] Added part of Patch.
Fixed error "error in the SQL statement (not null column corp set to null)"

TheMightyDude (27 Oct 2006)
--------------------------------------