@@ -537,11 +537,10 @@ case LOG_BOUNTY_FEDBOUNTY:
     $retvalue[title] = $l_log_title[$entry[type]];
     break;
  case LOG_SPACE_PLAGUE:
-    list($name,$sector) = split ("\|", $entry[data]);
+    list($name, $sector, $percentage) = split ("\|", $entry[data]);
     $retvalue[text] = str_replace("[name]", "<font color=white><b>$name</b></font>", $l_log_text[$entry[type]]);
     $retvalue[text] = str_replace("[sector]", "<font color=white><b>$sector</b></font>", $retvalue[text]);
-    $percentage = $space_plague_kills * 100;
-    $retvalue[text] = str_replace("[percentage]", "$space_plague_kills", $retvalue[text]);
+    $retvalue[text] = str_replace("[percentage]", "<font color=white><b>$percentage</b></font>", $retvalue[text]);
     $retvalue[title] = $l_log_title[$entry[type]];
     break;
  case LOG_PLASMA_STORM:
